service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvc
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
