serviceBACK.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvcback
spec:
  selector:
    app: backend
  ports:    
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 1180
