ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: drewingress.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srvc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: srvcback
            port:
              number: 8080
